# substrate-dev

./: .gitignore  README.md
collect-app/collect/: Cargo.toml  README.md  launch.sh
collect-app/collect-ink/: Cargo.toml  build.sh  test.sh
collect-app/collect-ink/src/: lib.rs
collect-app/collect/runtime/: Cargo.toml
collect-app/collect/runtime/src/: lib.rs
collect-app/collect/runtime/wasm/: Cargo.toml  build.sh
collect-app/collect/runtime/wasm/src/: lib.rs
collect-app/collect/src/: chain_spec.rs  main.rs  service.rs
groups-app/groups/: Cargo.toml  README.md  launch.sh  rebuild.sh  test.sh
groups-app/groups/runtime/: Cargo.toml
groups-app/groups/runtime/src/: groups.rs  lib.rs
groups-app/groups/runtime/wasm/: Cargo.toml  build.sh
groups-app/groups/runtime/wasm/src/: lib.rs
groups-app/groups/src/: chain_spec.rs  cli.rs  main.rs  service.rs
kitties-ui/src/: app.jsx
kitties/runtime/src/: lib.rs  substratekitties.rs
kitties/src/: main.rs
pool-app/pool/: Cargo.toml  README.md  rebuild.sh  test.sh
pool-app/pool/runtime/: Cargo.toml
pool-app/pool/runtime/src/: approve.rs  lib.rs  pool.rs
pool-app/pool/runtime/wasm/: Cargo.toml  build.sh
pool-app/pool/runtime/wasm/src/: lib.rs
pool-app/pool/src/: chain_spec.rs  main.rs  service.rs
